<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/sign_out" />
        <item
            android:id="@+id/nav_tech_news"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/tech_news" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_about_us_24dp"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_likeus"
                android:icon="@drawable/ic_thumb_up_black_24dp"
                android:title="@string/like_us"
                />

        </menu>
    </item>

</menu>
