<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.dorvis.quizapp.AndroidActivity">

    <RelativeLayout
        android:id="@+id/raltive1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/faq_back_android"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back_arrow" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/android"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_view_countdown"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:text="@string/score_0"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_score"
        android:layout_alignStart="@+id/text_view_score"
        android:layout_below="@+id/raltive1"
        android:layout_marginTop="17dp"
        android:text="@string/question_quiz"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/raltive1"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="7dp"
        android:text="@string/_00_30"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radio_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/qestion_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1" />

        <RadioButton
            android:id="@+id/radio_button2A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2" />

        <RadioButton
            android:id="@+id/radio_button3A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3" />

    </RadioGroup>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radio_group"
        android:background="@color/startblue"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/confirm" />

</RelativeLayout>



