<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:layout_weight="7"
    android:padding="8dp" android:baselineAligned="false">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="4dp">

        <ImageView
            android:id="@+id/galleryImage"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imagedescription" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="7"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#000"
            android:shadowRadius="1.0"
            android:textColor="#666666"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"
            android:maxLines="2"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/sdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#777777"
            android:textSize="16sp"
            android:maxLines="2"
            android:minLines="2"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:text="@string/description"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/author"
                    android:textSize="15sp"
                    android:textColor="#42A5F5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"/>

            </LinearLayout>


            <TextView
                android:id="@+id/time"
                android:gravity="left|start"
                android:textSize="14sp"
                android:textColor="#42A5F5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newstime"/>
        </LinearLayout>



    </LinearLayout>



</LinearLayout>




