<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dorvis.quizapp.result.JavaResultActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:id="@+id/relativeLayout">


        <ImageView
            android:id="@+id/faq_back_arrowJ"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back_arrow" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Result"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/textview_resultJ"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="49dp"
        android:gravity="center_horizontal"
        android:text="@string/score_0" />






</RelativeLayout>