<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dorvis.quizapp.subactivities.ToDoNotificationActivity">
    <!-- Header aligned to top -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/faq_back_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back_arrow" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sub_notification"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </RelativeLayout>


    <ImageView
        android:id="@+id/notify_imageview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/notificationImg"
        android:background="@color/colorPrimary"
        android:clickable="true"
        app:srcCompat="@drawable/ic_notifications_active_black_24dp" android:focusable="true" />
</FrameLayout>
